@@ -1,3 +1,6 @@
+2006-Sep-08  Heikki Junnila <hjunnila@users.sf.net>
+	* Fixed EFX run order & direction, which didn't work at all before.
+
 2006-Sep-03  Heikki Junnila <hjunnila@users.sf.net>
 	* Fixed a bug in efxeditor: correct start & stop scenes were not
 	  selected when the dialog was opened a second time.
